# conmech

./: .dockerignore  .env  .gitignore  .travis.yml  README.md  STATIC-HEMI-CROSS-EQUATION.ipynb  dockerfile  dockerfile_deep  float_model.tflite  pyproject.toml  pytest.ini  quantized.tflite  requirements-deep.txt  requirements.txt  starter_graph.py  starter_simulator.py
blender/: conmech_mid.py  conmech_old.py  load.py  render.py
conmech/: __init__.py  boundaries_builder.py  f.py  forces.py  grid.py  grid_factory.py  matrices.py  point.py  problem_solver.py  problems.py  simulation_runner.py  state.py  tensor.py  vertex_utils.py
cython_modules/: setup.py  weights.c  weights.html  weights.ipynb  weights.pyx
deep_conmech/: examples_graph_2d.py  layers_plot.py  run_model.py  save_tf_dataset.py  scenarios.py  starter_simulator.py  starter_simulator_2d.py  starter_simulator_3d.py  training_config.py
documentation/: main.tex
examples/: BOSK_2024.py  BOSK_2024_example_1.py  BOSK_2024_example_2.py  BOSK_plot_postprocessing.py  BOST_2024.py  Bagirov_Bartman_Ochal_2023.py  Bagirrov_Bartman_Ochal_2024.py  Bartman-Szwarc_Bagirrov_Ochal_2025.py  BartmanSzwarc_Bagirrov_Ochal_2025.py  BartmanSzwarc_Ochal_Sofonea_Tarzia_2025.py  BartmanSzwarc_Ochal_Tarzia_2026.py  Bartman_Ochal_Sofonea_2024.py  Jureczka_Ochal_Bartman_2023.py  Jureczka_and_Ochal_2019.py  Makela_et_al_1998.py  Sofonea_Ochal_Bartman_2023.py  __init__.py  compare_examples.py  draft_examples.py  draft_examples_3d.py  draft_mesh.py  draft_presentation.py  error_estimates.py  example_1.py  example_Tarzia_problem.py  example_basic.py  example_clarke_subgradient.py  example_density.py  example_dynamic.py  example_dynamic_membrane.py  example_imported_mesh.py  example_imported_mesh_static.py  example_manufactured_solution.py  example_nonhomogenous_density.py  example_piezo_quasistatic.py  example_piezoelectric_dynamic.py  example_piezoelectric_quasistatic.py  example_poisson.py  example_poisson_error_map.py  example_quasistatic.py  (+26 more)
flax/: main.py  mnist.py
graph/: config.py  (+14 more)
(+357 files in other folders)
